delete mapper path

--- a/src/app/home/b2b-flows-manage/node-properties/node-mapping/formula-editor/formula-editor.component.scss
+++ b/src/app/home/b2b-flows-manage/node-properties/node-mapping/formula-editor/formula-editor.component.scss
@@ -21,7 +21,7 @@
 .suggestion-list {
     min-width: 500px;
     max-width: 500px;
-    min-height: calc(100vh - 540px);
+    min-height: 200px;
     max-height: calc(100vh - 540px);
     overflow-y: auto;
 }
