DS-353 is fixed.

--- a/src/app/home/b2b-flows/b2b-flows.component.html
+++ b/src/app/home/b2b-flows/b2b-flows.component.html
@@ -25,7 +25,7 @@
         <div *ngIf="records.length==0" class="rounded-lg border bg-white p-4">
             <p class="m-0">No Records Found, <button type="button" class="btn btn-link px-1 py-0"
                     (click)="newFlow()">Click
-                    Here</button> to create a new Flow
+                    Here</button> to create a new Data Pipe
                 <span *ngIf="searchTerm">:&nbsp;<span class="fw-500">{{searchTerm}}</span></span>
             </p>
         </div>
