--- a/src/app/home/b2b-flows-manage/node-properties/node-properties.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/node-properties.component.html
@@ -151,9 +151,6 @@
             <div class="position-relative">
                 <textarea id="nodeUrl" class="form-control" cols="30" rows="4"
                     [(ngModel)]="currNode.options.url"></textarea>
-                <!-- <odp-node-data-selector *ngIf="toggle['url']" [edit]="edit" [(toggle)]="toggle['url']" [nodeList]="nodeList"
-                    [(value)]="currNode.options.url" [textarea]="true">
-                </odp-node-data-selector> -->
             </div>
         </div>
         <div class="form-group">
@@ -179,13 +176,6 @@
                 [(value)]="currNode.options.headers">
             </odp-add-headers>
         </div>
-        <!-- <div class="form-group position-relative">
-            <label class="font-14 fw-400 text-dark" for="nodeBody">Body</label>
-            <textarea id="nodeBody" class="form-control dynamic-variable-addon" cols="30" rows="4"
-                [(ngModel)]="currNode.options.body"></textarea>
-            <odp-node-data-selector [nodeList]="nodeList" [(value)]="currNode.options.body">
-            </odp-node-data-selector>
-        </div> -->
         <div class="form-group position-relative">
             <label class="font-14 fw-400 text-dark mb-0" for="nodeBody">Body</label>
             <odp-input-data-selector class="d-flex" [edit]="edit" [(data)]="currNode.options.body"
@@ -274,9 +264,7 @@
                 <span class="dsi dsi-settings text-primary hover"
                     (click)="toggle['changeRoot']=!toggle['changeRoot']"></span>
             </label>
-            <!-- <input id="nodeUnWind" type="text" class="form-control dynamic-variable-addon"
-                [(ngModel)]="currNode.options.unwindPath" (ngModelChange)="changesDone.emit()"> -->
-            <odp-node-data-selector [edit]="edit" [(toggle)]="toggle['changeRoot']" [nodeList]="nodeList"
+            <odp-node-data-selector [edit]="edit" [(toggle)]="toggle['changeRoot']" [currNode]="currNode"
                 [(value)]="currNode.options.unwindPath">
             </odp-node-data-selector>
         </div>
@@ -335,9 +323,7 @@
                 <span class="dsi dsi-settings text-primary hover"
                     (click)="toggle['statusCode']=!toggle['statusCode']"></span>
             </label>
-            <!-- <input id="nodeStatusCode" type="text" class="form-control dynamic-variable-addon"
-                [(ngModel)]="currNode.options.statusCode" (ngModelChange)="changesDone.emit()"> -->
-            <odp-node-data-selector [edit]="edit" [(toggle)]="toggle['statusCode']" [nodeList]="nodeList"
+            <odp-node-data-selector [edit]="edit" [(toggle)]="toggle['statusCode']" [currNode]="currNode"
                 [(value)]="currNode.options.statusCode">
             </odp-node-data-selector>
         </div>
@@ -359,11 +345,6 @@
             <label class="font-14 fw-400 text-dark d-flex align-items-center justify-content-between" for="nodeBody">
                 Body
             </label>
-            <!-- <textarea id="nodeBody" class="form-control dynamic-variable-addon" cols="30" rows="4"
-                [(ngModel)]="currNode.options.body"></textarea> -->
-            <!-- <odp-node-data-selector [edit]="edit" [(toggle)]="toggle['body']" [nodeList]="nodeList"
-                [(value)]="currNode.options.body">
-            </odp-node-data-selector> -->
             <odp-input-data-selector class="d-flex" [edit]="edit" [(data)]="currNode.options.body"
                 [currNode]="currNode">
             </odp-input-data-selector>
