--- a/src/app/home/b2b-flows-manage/node-properties/connector-properties/mssql-connector/mssql-connector.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/connector-properties/mssql-connector/mssql-connector.component.html
@@ -3,8 +3,7 @@
         SQL Query
         <span class="dsi dsi-settings text-primary hover" (click)="toggle['query']=!toggle['query']"></span>
     </label>
-    <!-- <textarea id="query" class="form-control" rows="5" cols="30" [(ngModel)]="currNode.options.query"></textarea> -->
-    <odp-node-data-selector [edit]="edit" [(toggle)]="toggle['query']" [textarea]="true" [nodeList]="nodeList"
+    <odp-node-data-selector [edit]="edit" [(toggle)]="toggle['query']" [textarea]="true" [currNode]="currNode"
         [(value)]="currNode.options.query">
     </odp-node-data-selector>
 </div>
