--- a/src/app/home/b2b-flows-manage/node-properties/connector-properties/sftp-connector/sftp-connector.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/connector-properties/sftp-connector/sftp-connector.component.html
@@ -4,8 +4,7 @@
         <span class="dsi dsi-settings text-primary hover"
             (click)="toggle['directoryPath']=!toggle['directoryPath']"></span>
     </label>
-    <!-- <input id="directoryPath" class="form-control dynamic-variable-addon" type="text" [(ngModel)]="currNode.options.directoryPath"> -->
-    <odp-node-data-selector [edit]="edit" [(toggle)]="toggle['directoryPath']" [nodeList]="nodeList"
+    <odp-node-data-selector [edit]="edit" [(toggle)]="toggle['directoryPath']" [currNode]="currNode"
         [(value)]="currNode.options.directoryPath"></odp-node-data-selector>
 </div>
 <div class="form-group position-relative">
@@ -13,8 +12,7 @@
         File Name
         <span class="dsi dsi-settings text-primary hover" (click)="toggle['fileName']=!toggle['fileName']"></span>
     </label>
-    <!-- <input id="fileName" class="form-control dynamic-variable-addon" type="text" [(ngModel)]="currNode.options.fileName"> -->
-    <odp-node-data-selector [edit]="edit" [(toggle)]="toggle['fileName']" [nodeList]="nodeList"
+    <odp-node-data-selector [edit]="edit" [(toggle)]="toggle['fileName']" [currNode]="currNode"
         [(value)]="currNode.options.fileName"></odp-node-data-selector>
 </div>
 <div class="d-flex flex-column">
