--- a/src/app/utils/styled-text/styled-text.component.scss
+++ b/src/app/utils/styled-text/styled-text.component.scss
@@ -9,7 +9,7 @@
 // }
 
 .input-container {
-    border: 1px solid gray;
+    border: 1px solid grey;
     border-radius: 4px;
     // width: 260px;
     height: 32px;
